HD/hw2/hw2D.out
Script started on Tue 15 Sep 2015 09:05:29 PM CDT
rns202-16.cs.stolaf.edu% gcc[K[K[Kg++ -o sqrts1 sqrts.C
rns202-16.cs.stolaf.edu% /[K.\sqrts1
.sqrts1: Command not found.
rns202-16.cs.stolaf.edu% /[K./sqrts1
n	sqrt(n)
----------------
0	0
1	1
2	1.41421
3	1.73205
4	2
5	2.23607
rns202-16.cs.stolaf.edu% gcc -o sqrts2 sqrts.c -lm
[01m[Ksqrts.c:8:1:[m[K [01;35m[Kwarning: [m[Kreturn type defaults to ‘[01m[Kint[m[K’ [-Wimplicit-int]
 main()
[01;32m[K ^[m[K
rns202-16.cs.stolaf.edu% emacs sqrts.c

(emacs:14151): GLib-GObject-WARNING **: The property GtkSettings:gtk-enable-tooltips is deprecated and shouldn't be used anymore. It will be removed in a future version.

(emacs:14151): GVFS-RemoteVolumeMonitor-WARNING **: remote volume monitor with dbus name org.gtk.Private.GoaVolumeMonitor is not supported

(emacs:14151): GLib-GObject-WARNING **: The property GtkButton:use-stock is deprecated and shouldn't be used anymore. It will be removed in a future version.

(emacs:14151): GLib-GObject-WARNING **: The property GtkSettings:gtk-button-images is deprecated and shouldn't be used anymore. It will be removed in a future version.
rns202-16.cs.stolaf.edu% gcc -o sqrts2 sqrts.c =lm[K[K[K=[K-lm
[01m[Ksqrts.c:8:1:[m[K [01;35m[Kwarning: [m[Kreturn type defaults to ‘[01m[Kint[m[K’ [-Wimplicit-int]
 main()
[01;32m[K ^[m[K
rns202-16.cs.stolaf.edu% emacs sqrts.c
rns202-16.cs.stolaf.edu% ./sqrts
./sqrts: Command not found.
rns202-16.cs.stolaf.edu% .[Kcat sqrts.c


/* print square roots in C language.  R. Brown, 9/2010 */

#include <stdio.h>
#include <math.h>

main()
{
  int n;
  printf("n\tsqrt(n)\n----------------\n");
  for (n=0;  n<=5;  n++)
    printf("%d\t%f\n", n, sqrt(n));
  return 0;
}

rns202-16.cs.stolaf.edu% ./sqrts1[K.c
./sqrts.c: Permission denied.
rns202-16.cs.stolaf.edu% ./qr[K[Ksqrts.c
./sqrts.c: Permission denied.
rns202-16.cs.stolaf.edu% ./sqrts2
n	sqrt(n)
----------------
0	0.000000
1	1.000000
2	1.414214
3	1.732051
4	2.000000
5	2.236068
rns202-16.cs.stolaf.edu% cp ~sc241/hw/sqrts.scm ,.[K[K.
Unknown user: sc241.
rns202-16.cs.stolaf.edu% cp ~cs241/hw/sqrts.scm .
rns202-16.cs.stolaf.edu% emacs sqrts.scm
rns202-16.cs.stolaf.edu% sourcs[Ke ~s[Kcs241/setup
rns202-16.cs.stolaf.edu% mzshe[K[Kcheme
Welcome to Racket v5.3.
> ^^?  ^[[2~     ^^?  ;;; print square roots in Scheme language.  R. Brown, 9/2010

(define print-sqrts
  (lambda (n) ; print square roots from n to 5
    (if (>  n 5) 'done
	(begin
	  (display n)
	  (display "\t")
	  (display (sqrt n))
	  (newline)
	  (print-sqrts (+ n 1))))))

(display "(n\tsqrt n)")
(newline)
(display "----------")
(newline)
(print-sqrts 0)

> (n	sqrt n)> 
> ----------> 
> 0	0
1	1
2	1.4142135623730951
3	1.7320508075688772
4	2
5	2.23606797749979
done
> (exit)
rns202-16.cs.stolaf.edu% cs[K[Kcp c[K~cs241/hw/Sqrts.java .
rns202-16.cs.stolaf.edu% emacs Sqrts.java
rns202-16.cs.stolaf.edu% javac Sqrts.java
/home/mscs/bin64/javac
rns202-16.cs.stolaf.edu% java sq[K[KSqrts
/home/mscs/bin64/java
n	sqrt(n)
----------------
0	0.0
1	1.0
2	1.4142135623730951
3	1.7320508075688772
4	2.0
5	2.23606797749979
rns202-16.cs.stolaf.edu% cp ~s[Kcs2412[K/hw/sqrts.py . 
rns202-16.cs.stolaf.edu% emacs sqrts.py

(emacs:14419): GLib-GObject-WARNING **: The property GtkSettings:gtk-enable-tooltips is deprecated and shouldn't be used anymore. It will be removed in a future version.
rns202-16.cs.stolaf.edu% python3 sqrts.py
n	sqrt(n)
----------------
Traceback (most recent call last):
  File "sqrts.py", line 8, in <module>
    print(n+"\t"+sqrt(n))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
rns202-16.cs.stolaf.edu% emacs sqrts.py
rns202-16.cs.stolaf.edu% python32[K sqrts.py
n	sqrt(n)
----------------
Traceback (most recent call last):
  File "sqrts.py", line 8, in <module>
    print(n + "\t" + sqrt(n))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
rns202-16.cs.stolaf.edu% emacs.pu[K[K[K sqrts[K.py
rns202-16.cs.stolaf.edu% emacs.[K sqrts.py
rns202-16.cs.stolaf.edu% emacs[K[K[K[K[Kp[[Kython3 sqrts.pu[Ky
  File "sqrts.py", line 8
    print(n"\t"sqrt(n))
              ^
SyntaxError: invalid syntax
rns202-16.cs.stolaf.edu% emacs p[Ksqrts.py
rns202-16.cs.stolaf.edu% python3 sqrts.py
n	sqrt(n)
----------------
Traceback (most recent call last):
  File "sqrts.py", line 8, in <module>
    print(n+"     "+sqrt(n))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
rns202-16.cs.stolaf.edu% emacs py[K[Ksqw[Krts.py
rns202-16.cs.stolaf.edu% python2[K3 sqrts.py
n	sqrt(n)
----------------
0 	 0.0
1 	 1.0
2 	 1.41421356237
3 	 1.73205080757
4 	 2.0
5 	 2.2360679775
rns202-16.cs.stolaf.edu% exit
exit

Script done on Tue 15 Sep 2015 09:41:21 PM CDT
